k8s/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: openrmf-keycloak
  namespace: openrisk
spec:
  selector:
    app: openrmf-keycloak
  ports:
    - port: 8080
      targetPort: 8080
