k8s/service-opencti.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencti
  namespace: openrisk
spec:
  selector:
    app: opencti
  ports:
    - port: 8080
      targetPort: 8080
