k8s/service-thehive.yaml
apiVersion: v1
kind: Service
metadata:
  name: thehive
  namespace: openrisk
spec:
  selector:
    app: thehive
  ports:
    - port: 9000
      targetPort: 9000
